# Mathilda

./: .gitignore  CMakeLists.txt  ClearBuild.bat  GenerateCMake_MakeFile_CompileDebug.bat  GenerateCMake_MakeFile_CompileRelease.bat  GenerateSolution.bat  Mathilda.sln  README.md  include_premake5.lua  premake5.lua
Mathilda/: Mathilda.vcxproj  Mathilda.vcxproj.filters  cpp.hint
Mathilda/include/: ILDA_core.h
Mathilda/include/ILDA_matrix/: ILDA_matrix.h  ILDA_matrix2x2_float.h  ILDA_matrix3x3_float.h  ILDA_matrix4x4_float.h
Mathilda/include/ILDA_quaternion/: ILDA_quaternion.h
Mathilda/include/ILDA_trigo/: ILDA_trigo.h  ILDA_trigo_float.h  trigo_float.h
Mathilda/include/ILDA_utils/: ILDA_random_float.h  ILDA_random_int.h  ILDA_utils.h  ILDA_utils_float.h  ILDA_utils_int.h
Mathilda/include/ILDA_vector/: ILDA_vector.h  ILDA_vector_double.h  ILDA_vector_float.h  ILDA_vector_int.h
Mathilda/includes/: ILDA_matrix.h  ILDA_vector.h
Mathilda/src/: ILDA_constants.h  ILDA_core.h  ILDA_main_test.c  ILDA_type_off.h  ILDA_type_on.h  ILDA_vector.h
Mathilda/src/matrix/: ILDA_matrix2x2_double.h  ILDA_matrix2x2_float.h  ILDA_matrix3x3_double.h  ILDA_matrix3x3_float.h  ILDA_matrix4x4_double.h  ILDA_matrix4x4_float.h  ILDA_matrix_double.h  ILDA_matrix_link.c  ILDA_matrix_size_off.h  ILDA_matrix_size_on.h  ILDA_matrix_source.c  ILDA_matrix_specials_source.c
Mathilda/src/quaternion/: ILDA_quaternion_float.c
Mathilda/src/trigo/: ILDA_trigo_float.c  trigo_float.c
Mathilda/src/utils/: ILDA_random_source.c  ILDA_utils_link.c  ILDA_utils_source.c
Mathilda/src/vector/: ILDA_vector_double.h  ILDA_vector_double_source.c  ILDA_vector_float.h  ILDA_vector_int.h  ILDA_vector_link.c  ILDA_vector_source.c  ILDA_vector_special_float.c
